--- a/index.html
+++ b/index.html
@@ -26,29 +26,35 @@
 				<div class="text-center container">
 					<div class="row">
 						<div class="p1-container col-md-6">
-							<div class="wait-container">
+							<label id="lblP1Record"></label><br />
+							<label class="lblP1Name"></label>
+							<div class="p1-wait-container">
 								<h2>Waiting For Player 1</h2>
 							</div>
+							<div class="p1-wait-for-p2-container">
+								<h2>Waiting For Player 2 to move</h2>
+							</div>
 							<div class="play1-container">
-								<label class="lblP1Name"></label>
-								<button id="btnP1Rock" class="btn btn-primary">Rock</button>
-								<button id="btnP1Paper" class="btn btn-primary">Paper</button>
-								<button id="btnP1Scissors" class="btn btn-primary">Scissors</button>
+								<button id="btnP1Rock" class="btn btn-primary btn-p1" data-play="Rock">Rock</button>
+								<button id="btnP1Paper" class="btn btn-primary btn-p1" data-play="Paper">Paper</button>
+								<button id="btnP1Scissors" class="btn btn-primary btn-p1" data-play="Scissors">Scissors</button>
 								<br />
-								<label id="lblP1Record"></label>
 							</div>
 						</div>
 						<div class="p2-container col-md-6">
-							<div class="wait-container">
+							<label id="lblP2Record"></label><br />
+							<label class="lblP2Name"></label>
+							<div class="p2-wait-container">
 								<h2>Waiting For Player 2</h2>
 							</div>
+							<div class="p2-wait-for-p1-container">
+								<h2>Waiting For Player 1 to move</h2>
+							</div>
 							<div class="play2-container">
-								<label class="lblP2Name"></label>
-								<button id="btnP2Rock" class="btn btn-primary">Rock</button>
-								<button id="btnP2Paper" class="btn btn-primary">Paper</button>
-								<button id="btnP2Scissors" class="btn btn-primary">Scissors</button>
+								<button id="btnP2Rock" class="btn btn-primary btn-p2" data-play="Rock">Rock</button>
+								<button id="btnP2Paper" class="btn btn-primary btn-p2" data-play="Paper">Paper</button>
+								<button id="btnP2Scissors" class="btn btn-primary btn-p2" data-play="Scissors">Scissors</button>
 								<br />
-								<label id="lblP1Record"></label>
 							</div>
 						</div>
 					</div>
