got the code to work multiplayer mode

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" href="fanpage-style.css"> -->
+	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="icon" type="image/jpg" href="http://www.dalessandroegalli.com/images/events/thumbs/236.jpg?t=1452720982">
 
 </head>
 <body>
 	<div class="wrapper">
 		<h1>Rock Paper Scissors</h1>
-		<div class="msg-center text-center">
+		<div class="msg-center text-center alert-info">
 		</div>
 		<div class="register-container text-center">
 			<input type="text" id="txtName" class="textbox" placeholder="Name" />
