fixed the msg center width and height and added padding

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
 	<div class="wrapper">
 		<h1>Rock Paper Scissors</h1>
-		<div class="msg-center text-center alert-info">
-		</div>
+		
 		<div class="register-container text-center">
 			<input type="text" id="txtName" class="textbox" placeholder="Name" />
 			<button id="cmdPlay" type="submit" class="btn btn-default cmdPlay">Submit</button>
 		</div>
 		<div class="gameplay-container">
+			<div class="msg-center text-center alert-info"></div>
 			<div class="jumbotron">
 				<div class="text-center container">
 					<div class="row">
